--- a/works/viz4socialgood/description-en.html
+++ b/works/viz4socialgood/description-en.html
@@ -1,56 +1,56 @@
 <!doctype html>
-<html>
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" />
+    <meta property="og:url" content="http://localhost:8888/kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Visualization of Human Trafficking" />
     <meta property="og:description" content=""But you do not know where I came from or where I am going"" />
-    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png" />
+    <meta property="og:image" content="http://localhost:8888/kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Visualization of Human Trafficking</title>
-		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-amp-en.html">
-    <link rel="stylesheet" href="../../assets/css/style.css">
-  </head>
-  <body class="work-description">
-    <div id="container">
-      <div id="icons-block">
-        <i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-        <i class="material-icons" id="icon-menu">menu</i>
-        <div id="menu">
-          <div id="menu-cover"></div>
-          <div id="menu-content">
-            <div class="item">
-              <i class="material-icons" id="icon-close">close</i>
-            </div>
-            <div class="item"><a href="../../">Home</a></div>
-            <div class="item"><a href="../../about/">About</a></div>
-            <div class="item"><a href="../../works/">Works</a></div>
-          </div>
+		<link rel="amphtml" href="http://localhost:8888/kaz-ogiwara.github.io/works/viz4socialgood/description-amp-en.html">
+    <link rel="stylesheet" href="http://localhost:8888/kaz-ogiwara.github.io/assets/css/style.css">
+	</head>
+	<body>
+		<div id="container">
+		<div id="icons-block">
+			<div id="icons-left">
+				<a href="http://localhost:8888/kaz-ogiwara.github.io/">
+					<i class="material-icons" id="icon-home">home</i>
+				</a>
+			</div>
+			<div id="icons-right">
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="separator">|</div>
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/about/">About</a></div>
+			</div>
+		</div>
+      <div id="pjax-content" class="work-description">
+        <div id="title-block">
+          <div class="date">July 2018</div>
+          <h1>Visualization of Human Trafficking</h1>
+          <h3>"But you do not know where I came from or where I am going"</h3>
+        </div>
+        <div id="eyecatch-block">
+          <a href="./">
+            <img id="eyecatch" src="../../assets/img/eyecatch_viz4socialgood.png">
+          </a>
+        </div>
+        <div id="article-block">
+          <p>Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
+          <p>By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
+          <p><img src="img/screencast_viz4socialgood.gif"></p>
+          <p>Data source: <a href="https://www.ctdatacollaborative.org/" target="_blank">The Counter-Trafficking Data Collaborative</a> (CTDC)</p>
+          <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) for retrieving and shaping data</p>
+          <p><a class="button" href="./">See the App</a></p>
+          <p class="disclaimer">The app may not be available in your system environment.</p>
         </div>
       </div>
-      <div id="title-block">
-        <div class="date">July 2018</div>
-        <h1>Visualization of Human Trafficking</h1>
-        <h3>"But you do not know where I came from or where I am going"</h3>
-      </div>
-      <div id="eyecatch-block">
-        <a href="https://kaz-ogiwara.github.io/works/viz4socialgood/">
-          <img id="eyecatch" src="../../assets/img/eyecatch_viz4socialgood.png">
-        </a>
-      </div>
-      <div id="article-block">
-        <p>Interactive sankey diagram, map and details for <a href="https://www.vizforsocialgood.com/" target="_blank">Viz for Social Good</a></p>
-        <p>By hovering (or tapping) side bar, detailed information about the people from / to the country is shown.</p>
-        <p><img src="img/screencast_viz4socialgood.gif"></p>
-        <p>Data source: <a href="https://www.ctdatacollaborative.org/" target="_blank">The Counter-Trafficking Data Collaborative</a> (CTDC)</p>
-        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) for retrieving and shaping data</p>
-        <p><a class="button" href="https://kaz-ogiwara.github.io/works/viz4socialgood/">See the App</a></p>
-        <p class="disclaimer">The app may not be available in your system environment.</p>
-      </div>
-    </div>
+		</div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../../assets/js/script.js"></script>
+    <script src="http://localhost:8888/kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
