--- a/about/index.html
+++ b/about/index.html
@@ -3,111 +3,112 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="My works of data visualization">
-		<meta property="og:url" content="https://kaz-ogiwara.github.io/about/" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="About - Kazuki OGIWARA" />
-		<meta property="og:description" content="About myself" />
-		<meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_home.png" />
-		<meta name="twitter:card" content="summary_large_image" />
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <title>About - Kazuki OGIWARA</title>
-  </head>
-  <body class="about">
-    <div id="container">
-			<div id="icons-block">
-				<i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-				<i class="material-icons" id="icon-menu">menu</i>
-				<div id="menu">
-					<div id="menu-cover"></div>
-					<div id="menu-content">
-						<div class="item">
-							<i class="material-icons" id="icon-close">close</i>
-						</div>
-						<div class="item"><a href="../">Home</a></div>
-						<div class="item"><a href="../about/">About</a></div>
-						<div class="item"><a href="../works/">Works</a></div>
-					</div>
-				</div>
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta property="og:url" content="http://localhost:8888/kaz-ogiwara.github.io/works/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Works - Kazuki OGIWARA" />
+    <meta property="og:description" content="My works of data visualization" />
+    <meta property="og:image" content="http://localhost:8888/kaz-ogiwara.github.io/assets/img/eyecatch_works.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <title></title>
+		<link rel="amphtml" href="">
+    <link rel="stylesheet" href="http://localhost:8888/kaz-ogiwara.github.io/assets/css/style.css">
+	</head>
+	<body>
+		<div id="container">
+		<div id="icons-block">
+			<div id="icons-left">
+				<a href="http://localhost:8888/kaz-ogiwara.github.io/">
+					<i class="material-icons" id="icon-home">home</i>
+				</a>
 			</div>
-			<div id="title-block">
-				<h1>About</h1>
+			<div id="icons-right">
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="separator">|</div>
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/about/">About</a></div>
 			</div>
-			<div id="about-block">
-				<section>
-					<h2>Kazuki OGIWARA</h1>
-					<h5>Data Visualization Engineer in Tokyo</h5>
-					<div class="subsection">
-						<span class="strong">Born: </span>1987
-					</div>
-					<div class="subsection">
-						<span class="strong">Nationality: </span>Japanese
-					</div>
-					<div class="subsection">
-						<span class="strong">Alma mater: </span>University of Edinburgh (MSc. Design and Digital Media)
-					</div>
-					<div class="subsection">
-						<span class="strong">Residence: </span>Yokohama, Japan
-					</div>
-					<div class="subsection">
-						<span class="strong">Currently working as: </span>Data Visualization Engineer at Toyo Keizai Inc.
-					</div>
-					<div class="subsection">
-						<a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
-					</div>
-				</section>
-				<section>
-					<h3>Work Experience</h3>
-					<div class="subsection">
-						<h4>
-							<span class="strong">Toyo Keizai Inc.</span>, Tokyo, Japan
-						</h4>
-						<p class="gray">April 2010 - Present</p>
-					</div>
-					<div class="subsection">
-						<h4>
-							<span class="strong">Data Visualization Engineer</span> at Digital Media Department
-						</h4>
-						<p class="gray">September 2017 - Present</p>
-					</div>
-					<div class="subsection">
-						<h4 class="leave">Leave of absence to study abroad</h4>
-						<p class="gray">September 2016 - August 2017</p>
-					</div>
-					<div class="subsection">
-						<h4>
-							<span class="strong">Database and Web Developer</span> at Database Business Department
-						</h4>
-						<p class="gray">April 2014 - August 2016</p>
-					</div>
-					<div class="subsection">
-						<h4>
-							<span class="strong">Data Editor</span> at Database Business Department
-						</h4>
-						<p class="gray">April 2010 - March 2014</p>
-					</div>
-				</section>
-				<section>
-					<h3>Education</h3>
-					<div class="subsection">
-						<h4>
-							<span class="strong">University of Edinburgh</span>, Edinburgh, United Kingdom
-						</h4>
-						<p class="gray">September 2016 - August 2017</p>
-						<p class="degree">Master of Science (Design and Digital Media)</p>
-					</div>
-					<div class="subsection">
-						<h4>
-							<span class="strong">University of Tsukuba</span>, Tsukuba, Japan
-						</h4>
-						<p class="gray">April 2006 - March 2010</p>
-						<p>Bachelor of Human Science (Social Psychology)</p>
-					</div>
-				</section>
-			</div>
-    </div>
+		</div>
+      <div id="pjax-content" class="works">
+        <div id="title-block">
+          <h1>About</h1>
+        </div>
+        <div id="about-block">
+          <section>
+            <h2>Kazuki OGIWARA</h1>
+            <h5>Data Visualization Engineer / Designer in Tokyo</h5>
+            <div class="subsection">
+              <span class="strong">Born: </span>1987
+            </div>
+            <div class="subsection">
+              <span class="strong">Nationality: </span>Japanese
+            </div>
+            <div class="subsection">
+              <span class="strong">Alma mater: </span>University of Edinburgh (MSc. Design and Digital Media)
+            </div>
+            <div class="subsection">
+              <span class="strong">Residence: </span>Yokohama, Japan
+            </div>
+            <div class="subsection">
+              <span class="strong">Currently working as: </span>Data Visualization Engineer at Toyo Keizai Inc.
+            </div>
+            <div class="subsection">
+              <a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
+              <span class="delimiter">|</span>
+              <a href="https://twitter.com/kaz_ogiwara" target="_blank">Twitter</a>
+            </div>
+          </section>
+          <section>
+            <h3>Work Experience</h3>
+            <div class="subsection">
+              <h4>
+                <span class="strong">Toyo Keizai Inc.</span>, Tokyo, Japan
+              </h4>
+              <p class="gray">April 2010 - Present</p>
+            </div>
+            <div class="subsection">
+              <h4>
+                <span class="strong">Data Visualization Engineer</span> at Digital Media Department
+              </h4>
+              <p class="gray">September 2017 - Present</p>
+            </div>
+            <div class="subsection">
+              <h4 class="leave">Leave of absence to study abroad</h4>
+              <p class="gray">September 2016 - August 2017</p>
+            </div>
+            <div class="subsection">
+              <h4>
+                <span class="strong">Database and Web Developer</span> at Database Business Department
+              </h4>
+              <p class="gray">April 2014 - August 2016</p>
+            </div>
+            <div class="subsection">
+              <h4>
+                <span class="strong">Data Editor</span> at Database Business Department
+              </h4>
+              <p class="gray">April 2010 - March 2014</p>
+            </div>
+          </section>
+          <section>
+            <h3>Education</h3>
+            <div class="subsection">
+              <h4>
+                <span class="strong">University of Edinburgh</span>, Edinburgh, United Kingdom
+              </h4>
+              <p class="gray">September 2016 - August 2017</p>
+              <p class="degree">Master of Science (Design and Digital Media)</p>
+            </div>
+            <div class="subsection">
+              <h4>
+                <span class="strong">University of Tsukuba</span>, Tsukuba, Japan
+              </h4>
+              <p class="gray">April 2006 - March 2010</p>
+              <p>Bachelor of Human Science (Social Psychology)</p>
+            </div>
+          </section>
+        </div>
+      </div>
+		</div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="../assets/js/script.js"></script>
+    <script src="http://localhost:8888/kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
