--- a/works/musicxml/description-en.html
+++ b/works/musicxml/description-en.html
@@ -1,52 +1,50 @@
 <!doctype html>
-<html>
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/musicxml/description-en.html" />
+    <meta property="og:url" content="http://localhost:8888/kaz-ogiwara.github.io/works/musicxml/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Music score visualization" />
     <meta property="og:description" content="Visualization of classic music score from Music XML" />
-    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_musicxml.png" />
+    <meta property="og:image" content="http://localhost:8888/kaz-ogiwara.github.io/assets/img/eyecatch_musicxml.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Music score visualization</title>
-		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/musicxml/description-amp-en.html">
-    <link rel="stylesheet" href="../../assets/css/style.css">
-  </head>
-  <body class="work-description">
-    <div id="container">
-      <div id="icons-block">
-        <i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-        <i class="material-icons" id="icon-menu">menu</i>
-        <div id="menu">
-          <div id="menu-cover"></div>
-          <div id="menu-content">
-            <div class="item">
-              <i class="material-icons" id="icon-close">close</i>
-            </div>
-            <div class="item"><a href="../../">Home</a></div>
-            <div class="item"><a href="../../about/">About</a></div>
-            <div class="item"><a href="../../works/">Works</a></div>
-          </div>
+		<link rel="amphtml" href="http://localhost:8888/kaz-ogiwara.github.io/works/musicxml/description-amp-en.html">
+    <link rel="stylesheet" href="http://localhost:8888/kaz-ogiwara.github.io/assets/css/style.css">
+	</head>
+	<body>
+		<div id="container">
+		<div id="icons-block">
+			<div id="icons-left">
+				<a href="http://localhost:8888/kaz-ogiwara.github.io/">
+					<i class="material-icons" id="icon-home">home</i>
+				</a>
+			</div>
+			<div id="icons-right">
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="separator">|</div>
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/about/">About</a></div>
+			</div>
+		</div>
+      <div id="pjax-content" class="work-description">
+        <div id="title-block">
+          <div class="date">April, 2017</div>
+          <h1>Music score visualization</h1>
+          <h3>Visualization of classic music score from Music XML</h3>
+        </div>
+        <div id="eyecatch-block">
+          <img id="eyecatch" src="../../assets/img/eyecatch_musicxml.png">
+        </div>
+        <div id="article-block">
+          <p>This work was submitted as a class assignment.</p>
+          <p>Data source: <a href="http://openmusicscore.org/" target="_blank">Open Music Score</a></p>
+          <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
         </div>
       </div>
-      <div id="title-block">
-        <div class="date">April, 2017</div>
-        <h1>Music score visualization</h1>
-        <h3>Visualization of classic music score from Music XML</h3>
-      </div>
-      <div id="eyecatch-block">
-        <a href="https://kaz-ogiwara.github.io/works/musicxml/">
-          <img id="eyecatch" src="../../assets/img/eyecatch_musicxml.png">
-        </a>
-      </div>
-      <div id="article-block">
-        <p>This work was submitted as a class assignment.</p>
-        <p>Data source: <a href="http://openmusicscore.org/" target="_blank">Open Music Score</a></p>
-        <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-      </div>
-    </div>
+		</div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../../assets/js/script.js"></script>
+    <script src="http://localhost:8888/kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
