--- a/works/nobelprize/description-amp-en.html
+++ b/works/nobelprize/description-amp-en.html
@@ -176,12 +176,10 @@
         <h3>How Nobel Prize laureates are Getting Older</h3>
       </div>
       <div id="eyecatch-block">
-        <a href="https://kaz-ogiwara.github.io/works/nobelprize/">
-          <amp-img layout="responsive" src="../../assets/img/eyecatch_nobelprize.png" width="1200" height="630">
-        </a>
+        <amp-img layout="responsive" src="../../assets/img/eyecatch_nobelprize.png" width="1200" height="630">
       </div>
       <div id="article-block">
-        <p> is a visualisation of how Nobel Prize laureates have got older from the beginning of the prize. The winners of this prize are gradually getting older over the past 115 years, especially in the field of natural sciences. In Physics, for example, the latest ten laureates (avg. 71.1) are 23 years older than the first ten (avg. 47.8).</p>
+        <p>This visualisation is a visualisation of how Nobel Prize laureates have got older from the beginning of the prize. The winners of this prize are gradually getting older over the past 115 years, especially in the field of natural sciences. In Physics, for example, the latest ten laureates (avg. 71.1) are 23 years older than the first ten (avg. 47.8).</p>
         <p>The main feature of the visualisation is a composite graph that shows laureates with dots and the average age of the past 30 years displayed as a line. You can select a prize (trend line and laureates) and a line of another prize for comparison, from the select boxes above the graph. When the graph (each year) was hovered, detailed information of the winner in that year will be shown in the bottom­ right.</p>
         <p>This work was submitted as a class assignment.</p>
         <p>Data source: <a href="https://www.nobelprize.org/" target="_blank">Nobel Prize Official Website</a></p>
