--- a/works/pyramids/description-en.html
+++ b/works/pyramids/description-en.html
@@ -1,55 +1,51 @@
 <!doctype html>
-<html>
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/pyramids/description-en.html" />
+    <meta property="og:url" content="http://localhost:8888/kaz-ogiwara.github.io/works/pyramids/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="From Uganda to Japan" />
     <meta property="og:description" content="Population pyramids in each country" />
-    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_pyramids.png" />
+    <meta property="og:image" content="http://localhost:8888/kaz-ogiwara.github.io/assets/img/eyecatch_pyramids.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>From Uganda to Japan</title>
-		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/pyramids/description-amp-en.html">
-    <link rel="stylesheet" href="../../assets/css/style.css">
-  </head>
-  <body class="work-description">
-    <div id="container">
-      <div id="icons-block">
-        <i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-        <i class="material-icons" id="icon-menu">menu</i>
-        <div id="menu">
-          <div id="menu-cover"></div>
-          <div id="menu-content">
-            <div class="item">
-              <i class="material-icons" id="icon-close">close</i>
-            </div>
-            <div class="item"><a href="../../">Home</a></div>
-            <div class="item"><a href="../../about/">About</a></div>
-            <div class="item"><a href="../../works/">Works</a></div>
-          </div>
+		<link rel="amphtml" href="http://localhost:8888/kaz-ogiwara.github.io/works/pyramids/description-amp-en.html">
+    <link rel="stylesheet" href="http://localhost:8888/kaz-ogiwara.github.io/assets/css/style.css">
+	</head>
+	<body>
+		<div id="container">
+		<div id="icons-block">
+			<div id="icons-left">
+				<a href="http://localhost:8888/kaz-ogiwara.github.io/">
+					<i class="material-icons" id="icon-home">home</i>
+				</a>
+			</div>
+			<div id="icons-right">
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="separator">|</div>
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/about/">About</a></div>
+			</div>
+		</div>
+      <div id="pjax-content" class="work-description">
+        <div id="title-block">
+          <div class="date">July 2017</div>
+          <h1>From Uganda to Japan</h1>
+          <h3>Population pyramids in each country</h3>
+        </div>
+        <div id="eyecatch-block">
+          <img id="eyecatch" src="../../assets/img/eyecatch_pyramids.png">
+        </div>
+        <div id="article-block">
+          <p>This visualisation is 3D data visualisation containing 2D population pyramid graphs of 201 countries (regions) on the planet. Pyramids are ordered by average age, from Uganda as the youngest to Japan as the oldest. You can rotate view and zoom in / out by dragging and using the mouse scroll. When hovering on each pyramid, you can see the country's 2D pyramid on the bottom­ left side.</p>
+          <p>This work was submitted as a class assignment.</p>
+          <p>Data source: <a href="https://esa.un.org/unpd/wpp/Download/Standard/Population/" target="_blank">UN World Population Prospects 2017</a></p>
+          <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL for data acquisition and process</p>
         </div>
       </div>
-      <div id="title-block">
-        <div class="date">July 2017</div>
-        <h1>From Uganda to Japan</h1>
-        <h3>Population pyramids in each country</h3>
-      </div>
-      <div id="eyecatch-block">
-        <a href="https://kaz-ogiwara.github.io/works/pyramids/">
-          <img id="eyecatch" src="../../assets/img/eyecatch_pyramids.png">
-        </a>
-      </div>
-      <div id="article-block">
-        <p>This visualisation is 3D data visualisation containing 2D population pyramid graphs of 201 countries (regions) on the planet. Pyramids are ordered by average age, from Uganda as the youngest to Japan as the oldest. You can rotate view and zoom in / out by dragging and using the mouse scroll. When hovering on each pyramid, you can see the country's 2D pyramid on the bottom­ left side.</p>
-        <p>This work was submitted as a class assignment.</p>
-        <p>Data source: <a href="https://esa.un.org/unpd/wpp/Download/Standard/Population/" target="_blank">UN World Population Prospects 2017</a></p>
-        <p>Languages and libraries: JavaScript (Three.js, jQuery), SQL for data acquisition and process</p>
-        <p><a class="button" href="https://kaz-ogiwara.github.io/works/pyramids/">See the App</a></p>
-        <p class="disclaimer">The app may not be available in your system environment.</p>
-      </div>
-    </div>
+		</div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../../assets/js/script.js"></script>
+    <script src="http://localhost:8888/kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
