--- a/works/tourists/description-en.html
+++ b/works/tourists/description-en.html
@@ -1,54 +1,50 @@
 <!doctype html>
-<html>
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/tourists/description-en.html" />
+    <meta property="og:url" content="http://localhost:8888/kaz-ogiwara.github.io/works/tourists/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Tourists to Japan" />
     <meta property="og:description" content="Number of tourists from each country to each prefecture in Japan, in 2015" />
-    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_tourists.png" />
+    <meta property="og:image" content="http://localhost:8888/kaz-ogiwara.github.io/assets/img/eyecatch_tourists.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>Tourists to Japan</title>
-		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/tourists/description-amp-en.html">
-    <link rel="stylesheet" href="../../assets/css/style.css">
-  </head>
-  <body class="work-description">
-    <div id="container">
-      <div id="icons-block">
-        <i class="material-icons" id="icon-home">home<a href="https://kaz-ogiwara.github.io/"></a></i>
-        <i class="material-icons" id="icon-menu">menu</i>
-        <div id="menu">
-          <div id="menu-cover"></div>
-          <div id="menu-content">
-            <div class="item">
-              <i class="material-icons" id="icon-close">close</i>
-            </div>
-            <div class="item"><a href="../../">Home</a></div>
-            <div class="item"><a href="../../about/">About</a></div>
-            <div class="item"><a href="../../works/">Works</a></div>
-          </div>
+		<link rel="amphtml" href="http://localhost:8888/kaz-ogiwara.github.io/works/tourists/description-amp-en.html">
+    <link rel="stylesheet" href="http://localhost:8888/kaz-ogiwara.github.io/assets/css/style.css">
+	</head>
+	<body>
+		<div id="container">
+		<div id="icons-block">
+			<div id="icons-left">
+				<a href="http://localhost:8888/kaz-ogiwara.github.io/">
+					<i class="material-icons" id="icon-home">home</i>
+				</a>
+			</div>
+			<div id="icons-right">
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/works/">Works</a></div>
+				<div class="separator">|</div>
+				<div class="text-menu"><a href="http://localhost:8888/kaz-ogiwara.github.io/about/">About</a></div>
+			</div>
+		</div>
+      <div id="pjax-content" class="work-description">
+        <div id="title-block">
+          <div class="date">11 Feb 2017</div>
+          <h1>Tourists to Japan</h1>
+          <h3>Number of tourists from each country to each prefecture in Japan, in 2015</h3>
+        </div>
+        <div id="eyecatch-block">
+          <img id="eyecatch" src="../../assets/img/eyecatch_tourists.png">
+        </div>
+        <div id="article-block">
+          <p>This work was submitted as a class assignment.</p>
+          <p>Data source: <a href="https://opendata.resas-portal.go.jp/docs/api/v1/index.html" target="_blank">RESAS by Cabinet Office</a></p>
+          <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
         </div>
       </div>
-      <div id="title-block">
-        <div class="date">11 Feb 2017</div>
-        <h1>Tourists to Japan</h1>
-        <h3>Number of tourists from each country to each prefecture in Japan, in 2015</h3>
-      </div>
-      <div id="eyecatch-block">
-        <a href="https://kaz-ogiwara.github.io/works/tourists/">
-          <img id="eyecatch" src="../../assets/img/eyecatch_tourists.png">
-        </a>
-      </div>
-      <div id="article-block">
-        <p>This work was submitted as a class assignment.</p>
-        <p>Data source: <a href="https://opendata.resas-portal.go.jp/docs/api/v1/index.html" target="_blank">RESAS by Cabinet Office</a></p>
-        <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
-        <p><a class="button" href="https://kaz-ogiwara.github.io/works/tourists/">See the App</a></p>
-        <p class="disclaimer">The app may not be available in your system environment.</p>
-      </div>
-    </div>
+		</div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../../assets/js/script.js"></script>
+    <script src="http://localhost:8888/kaz-ogiwara.github.io/assets/js/script.js"></script>
   </body>
 </html>
