local -> github.io

--- a/index.html
+++ b/index.html
@@ -36,6 +36,33 @@
         <div id="works-block">
           <section>
             <div class="works">
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png)">
+				<a href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html"></a>
+				<div class="ribbon">
+					<span></span>
+				</div>
+			</div>
+			<div class="title">Visualization of Human Trafficking</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png)">
+				<a href="https://kaz-ogiwara.github.io/works/teachers/description-en.html"></a>
+				<div class="ribbon">
+					<span></span>
+				</div>
+			</div>
+			<div class="title">Schools are depending on part-time teachers</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png)">
+				<a href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html"></a>
+				<div class="ribbon">
+					<span></span>
+				</div>
+			</div>
+			<div class="title">Just Visualization: Japanese Coins</div>
+		</div>
             </div>
           </section>
           <p class="center">Works with ribbon have interctive version.</p>
