--- a/works/index.html
+++ b/works/index.html
@@ -34,6 +34,114 @@
           <h3>Data Visualization Engineer in Tokyo</h3>
         </div>
         <div id="works-block">
+			<section>
+				<h3>2018 - Private works</h3>
+				<div class="works">
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png)">
+				<a href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html"></a>
+				<div class="ribbon">
+					<span></span>
+				</div>
+			</div>
+			<div class="title">Visualization of Human Trafficking</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png)">
+				<a href="https://kaz-ogiwara.github.io/works/teachers/description-en.html"></a>
+				<div class="ribbon">
+					<span></span>
+				</div>
+			</div>
+			<div class="title">Schools are depending on part-time teachers</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png)">
+				<a href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html"></a>
+				<div class="ribbon">
+					<span></span>
+				</div>
+			</div>
+			<div class="title">Just Visualization: Japanese Coins</div>
+		</div>
+				</div>
+			</section>
+			<section>
+				<h3>2017 - Private works</h3>
+				<div class="works">
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_dissolution.png)">
+				<a href="https://kaz-ogiwara.github.io/works/dissolution/description-en.html"></a>
+				<div class="ribbon">
+					<span></span>
+				</div>
+			</div>
+			<div class="title">Elections and Dissolutions in The G7</div>
+		</div>
+				</div>
+			</section>
+			<section>
+				<h3>2017 - Works from class assignments</h3>
+				<div class="works">
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_trade.png)">
+				<a href="https://kaz-ogiwara.github.io/works/trade/description-en.html"></a>
+			</div>
+			<div class="title">Material to Product</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_pyramids.png)">
+				<a href="https://kaz-ogiwara.github.io/works/pyramids/description-en.html"></a>
+			</div>
+			<div class="title">From Uganda to Japan</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png)">
+				<a href="https://kaz-ogiwara.github.io/works/temperature/description-en.html"></a>
+			</div>
+			<div class="title">140 years temperature in Tokyo</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_nobelprize.png)">
+				<a href="https://kaz-ogiwara.github.io/works/nobelprize/description-en.html"></a>
+			</div>
+			<div class="title">Scientists Making a Queue</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_musicxml.png)">
+				<a href="https://kaz-ogiwara.github.io/works/musicxml/description-en.html"></a>
+			</div>
+			<div class="title">Music score visualization</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_collisions.png)">
+				<a href="https://kaz-ogiwara.github.io/works/collisions/description-en.html"></a>
+			</div>
+			<div class="title">Vehicle collisions in Edinburgh</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_population.png)">
+				<a href="https://kaz-ogiwara.github.io/works/population/description-en.html"></a>
+			</div>
+			<div class="title">Population of Japan</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_tourists.png)">
+				<a href="https://kaz-ogiwara.github.io/works/tourists/description-en.html"></a>
+			</div>
+			<div class="title">Tourists to Japan</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_earthquakes.png)">
+				<a href="https://kaz-ogiwara.github.io/works/earthquakes/description-en.html"></a>
+				<div class="ribbon">
+					<span></span>
+				</div>
+			</div>
+			<div class="title">Earthquakes on the earth</div>
+		</div>
+				</div>
+			</section>
           <p class="center">Works with ribbon have interctive version.</p>
         </div>
       </div>
